# pybind-mersenne-twister

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_script.py
src/: pymt19937ar.cpp
